--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -77,7 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveXControl.cs" />
+    <Compile Include="CustomSecurityManager.cs" />
     <Compile Include="DownloadsBefore.cs" />
+    <Compile Include="InternetInterfaces.cs" />
     <Compile Include="ModeTemplates.cs" />
     <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="FlashpointSecurePlayer.cs">
