--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/java.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/java.config
@@ -10,7 +10,7 @@
 	    <modeTemplates>
 		  <softwareModeTemplate hideWindow="true">
 		    <regexes>
-		      <regex name="(.+)" replace="Java\JDK_1.8.0_181\bin\appletviewer.exe -J-Dhttp.proxyHost=127.0.0.1 -J-Dhttp.proxyPort=8888 -J-Dhttps.proxyHost=127.0.0.1 -J-Dhttps.proxyPort=8888 $1" />
+		      <regex name="^\s*(?:(&quot;[^\\&quot;]*(?:\\&quot;[^\\&quot;]*)*&quot;?)\s*(.*)$)?([^\\&quot;\s]*(?:\\&quot;[^\\&quot;\s]*)*)\s*(.*)$" replace="Java\JDK_1.8.0_181\bin\appletviewer.exe -J-Dhttp.proxyHost=127.0.0.1 -J-Dhttp.proxyPort=22500 -J-Dhttps.proxyHost=127.0.0.1 -J-Dhttps.proxyPort=22500 -J-Dftp.proxyHost=127.0.0.1 -J-Dftp.proxyPort=22500 -J-DsocksProxyHost=127.0.0.1 -J-DsocksProxyPort= -J-Xbootclasspath/a:..\jre\lib\deploy.jar;..\jre\lib\javaws.jar;..\jre\lib\plugin.jar $2$4 $1$3" />
 			</regexes>
 		  </softwareModeTemplate>
 		</modeTemplates>
