updated README to mention new Java, rename RegistryBackup class to RegistryBackups for consistency, restart application when __COMPAT_LAYERS used in Server Mode

--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -92,7 +92,7 @@
     <Compile Include="RunAsAdministrator.cs" />
     <Compile Include="SingleInstance.cs" />
     <Compile Include="ProcessSync.cs" />
-    <Compile Include="RegistryBackup.cs" />
+    <Compile Include="RegistryBackups.cs" />
     <Compile Include="Server.cs">
       <SubType>Form</SubType>
     </Compile>
