--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.abcisland.abcisland.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.abcisland.abcisland.dll.config
@@ -6,6 +6,9 @@
     <flashpointSecurePlayer>
         <modifications>
             <modification name="activex\abcisland\abcisland.dll">
+				<environmentVariables>
+				  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
+				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLBOXWORDCTL.ATLBOXWORDCTLATTRIB.1"
                         valueName="" value="AtlBoxWordCtlAttrib Class" valueKind="String" />
