--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mjolauncher2.mjolauncher.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mjolauncher2.mjolauncher.dll.config
@@ -6,6 +6,9 @@
     <flashpointSecurePlayer>
         <modifications>
             <modification name="activex\mjolauncher2\mjolauncher.dll">
+				<environmentVariables>
+				  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
+				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\MJOLAUNCHER.MJLAUNCHERCTRL.1"
                         valueName="" value="MJLauncherCtrl Class" valueKind="String" />
