--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.raptisoftgameloader.rsgameloader.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.raptisoftgameloader.rsgameloader.dll.config
@@ -6,6 +6,9 @@
     <flashpointSecurePlayer>
         <modifications>
             <modification name="activex\raptisoftgameloader\rsgameloader.dll">
+				<environmentVariables>
+				  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
+				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\RSGAMELOADER.RSGAMELOADERCTRL.1"
                         valueName="" value="CRSGameLoaderCtrl Object" valueKind="String" />
