more ActiveX fixes for Kraisoft games

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.atomaders.atomaders.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.atomaders.atomaders.dll.config
@@ -6,6 +6,9 @@
     <flashpointSecurePlayer>
         <modifications>
             <modification name="activex\atomaders\atomaders.dll">
+				<environmentVariables>
+				  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
+				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLATOMADERCTL.ATLATOMADERCTLATTRIB.1"
                         valueName="" value="AtlAtomadersCtlAttrib Class" valueKind="String" />
