--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.aquacade.aquacade.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.aquacade.aquacade.dll.config
@@ -6,6 +6,9 @@
     <flashpointSecurePlayer>
         <modifications>
             <modification name="activex\aquacade\aquacade.dll">
+				<environmentVariables>
+				  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
+				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLLINESCTL.ATLLINESCTLATTRIB.1"
                         valueName="" value="AtlBoxWordCtlAttrib Class" valueKind="String" />
