--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.asianata.asianata.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.asianata.asianata.dll.config
@@ -6,6 +6,9 @@
     <flashpointSecurePlayer>
         <modifications>
             <modification name="activex\asianata\asianata.dll">
+				<environmentVariables>
+				  <environmentVariable name="__COMPAT_LAYER" value="Win2000Sp2" />
+				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\ATLASIANATACTL.ATLASIANATACTLATTRIB.1"
                         valueName="" value="AtlAsianataCtlAttrib Class" valueKind="String" />
