--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer2.config
@@ -18,6 +18,9 @@
 				</environmentVariables>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
+                        valueName="Directory" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x"
+                        valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
                         valueName="un.Directory" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\UnityWebPlayer\Unity3d2.x"
                         valueKind="String" />
                 </registryBackups>
