changes to Viscape and Hypercosm configurations

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/hypercosm.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/hypercosm.config
@@ -6,15 +6,20 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="hypercosm">
+      <modification name="hypercosm" runAsAdministrator="true">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 		    <regexes>
-		      <regex name="^(\s*&quot;?)(.+)$" replace="$1..\..\..\Server\htdocs\$2" />
+		      <regex name="^(\s*&quot;?)http://(.+)$" replace="$1..\..\..\Server\htdocs\$2" />
 		      <regex name="(.+)" replace="Hypercosm\components\Hypercosm3D5E449320.exe $1" />
 			</regexes>
 		  </softwareModeTemplate>
 		</modeTemplates>
+		<registryBackups binaryType="SCS_32BIT_BINARY">
+			<registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\Software\Hypercosm\Hypercosm Player"
+				valueName="SystemDataPath" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\Hypercosm"
+				valueKind="String" />
+		</registryBackups>
       </modification>
     </modifications>
   </flashpointSecurePlayer>
