oops... that's not how Groove works

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.config
@@ -10,7 +10,7 @@
 	    <modeTemplates>
 		  <softwareModeTemplate>
 		    <regexes>
-		      <regex name="(.+)" replace="3DGrooveGX\GroovePlayer.exe $1" />
+		      <regex name="(.+)" replace="3DGrooveGX\GroovePlayer.exe" />
 			</regexes>
 		  </softwareModeTemplate>
 		</modeTemplates>
